/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/8.1/userguide/building_java_projects.html
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"

    implementation 'org.antlr:antlr4-runtime:4.13.1'
    implementation 'org.dhatim:fastexcel-reader:0.15.7'
    implementation 'de.siegmar:fastcsv:2.2.2'

    if (!project.hasProperty("noPoi")) {
        // 以下两个库只用于-checkcomma，可以不要，这样打出来的fatjar从20M会下降到2M
        implementation 'org.apache.poi:poi:5.2.4'
        implementation 'org.apache.poi:poi-ooxml:5.2.4'
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}


compileJava {
    if (project.hasProperty("noPoi")) {
        sourceSets.main.java.exclude("configgen/data/ReadByPoi.java")
    }
    options.compilerArgs += ["--enable-preview"]
    options.encoding = "UTF-8"
}

compileTestJava {
    options.compilerArgs += ["--enable-preview"]
    options.encoding = "UTF-8"
}

test {
    jvmArgs += ['--enable-preview']
}

run {
    jvmArgs += ['--enable-preview']
}

jar {
    manifest {
        attributes 'Main-Class': 'configgen.gen.Main'
    }
}

tasks.register('fatJar', Jar) {
    archiveFileName = 'configgen.jar'
    manifest.from jar.manifest
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from sourceSets.main.output
    dependsOn configurations.runtimeClasspath
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
}

application {
    mainClass = 'configgen.gen.Main'
    applicationDefaultJvmArgs = ['--enable-preview']
}

tasks.named('test') {
    useJUnitPlatform()
}
